fix(accordion-item): expand icon size and alignment

--- a/src/components/reusable/accordion/accordionItem.scss
+++ b/src/components/reusable/accordion/accordionItem.scss
@@ -53,9 +53,6 @@
 
 .expand-icon {
   display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
   margin-left: auto;
   transition: transform 150ms ease-out;
 
